--- a/src/Styles/Authorization/MainAuth.css
+++ b/src/Styles/Authorization/MainAuth.css
@@ -150,6 +150,7 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active  {
     -webkit-box-shadow: 0 0 0 30px #2E4158 inset !important;
+    box-shadow: 0 0 0 30px #2E4158 inset !important;;
 }
 
 
